--- a/z1-limits-service-qa.properties
+++ b/z1-limits-service-qa.properties
@@ -1,3 +1,3 @@
-limits-service.minimum=2
+z1-limits-service.minimum=2
 #default will be Picked for Maximum if not used maximum down
-limits-service.maximum=2222
+z1-limits-service.maximum=2222
